<resources>
    <string name="app_name" translatable="false">Sky - tours™</string>
    <string name="Agent" translatable="false">$</string>
    <string name="search">"Search"</string>
    <string name="info">Information</string>
    <string name="trips">"Trips"</string>
    <string name="settings">"Settings"</string>
    <string name="recent">"Recent"</string>
    <string name="hotels">"Hotels"</string>
    <string name="flight">"Flight"</string>
    <string name="cars">"Cars"</string>
    <string name="destinations">"Destinations"</string>
    <string name="title_home">Search</string>
    <string name="title_info">Information</string>
    <string name="title_trips">Trips</string>
    <string name="title_recent">Recents</string>
    <string name="title_settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="regional_settings">Regional settings</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="notifications">Notifications</string>
    <string name="log_in_agent">Log in\n(for agents)</string>
    <string name="log_in">Log in</string>
    <string name="help">Help</string>
    <string name="contacts">Contacts</string>
    <string name="about">About App</string>
    <string name="register_phone_hint" translatable="false">--------------</string>
    <string name="theme">Themes</string>
    <string name="brightness">Brightness</string>
    <string name="light">Night mode shedule</string>
    <string name="dark">Night mode shedule</string>
    <string name="color">Night mode shedule</string>
    <string name="nm">Night mode shedule</string>
    <string name="adult">"adult"</string>
    <string name="children">"children"</string>
    <string name="date">"date"</string>
    <string name="from">"from"</string>
    <string name="to">"to"</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hotelnflight">Hotel + Flight</string>
    <string name="big" translatable="false">Big Sky Group</string>
    <string name="exit">"Exit"</string>
    <string name="question_exit">"Are you sure you want to exit?"</string>
    <string name="possitive">"Yes"</string>
    <string name="negative">"No"</string>
    <string name="light_theme_value">Light</string>
    <string name="dark_theme_value">Dark</string>
    <string name="auto_battery_value">Auto-battery</string>
    <string name="follow_system_value">System</string>
    <string name="preference_theme_title">Theme</string>
    <string name="light_theme_name">Light theme</string>
    <string name="dark_theme_name">Dark theme</string>
    <string name="auto_battery_name">Auto battery</string>
    <string name="follow_system_name">Follow system</string>
    <string name="normal">normal</string>
    <string name="deuteranomaly">deuteranomaly(red/green)</string>
    <string name="protanomaly">protanomaly(red/green)</string>
    <string name="tritanomaly">tritanomaly(blue/yellow)</string>
    <string name="normal_value">normal</string>
    <string name="deuteranomaly_value">deuteranomaly(red/green)</string>
    <string name="protanomaly_value">protanomaly(red/green)</string>
    <string name="tritanomaly_value">tritanomaly(blue/yellow)</string>
    <string name="flight_mode_error">Your device is in Flight Mode, disable and restart the application.</string>
    <string name="location_permission_error">Permission was not granted! \n\n Enable permission manually in this application\'s settings and restart the application.</string>
    <string name="highprecision_internet_error" translatable="false">An error occurred when getting your location! \n\n Ensure your device is connected to the internet. \n\n Swipe down to refresh.</string>
    <string name="location_optimization_error" translatable="false">Location Optimization Permission was not granted! \n\n Enable permission manually in application settings \n and restart the application.</string>
    <string name="general_main_error" translatable="false">An error occurred in getting your location! \n\n Ensure your device is connected to the internet \n\n Swipe down to refresh.</string>
    <string name="enable_gps">Enable your GPS and restart!</string>
    <string name="location_permission">Location Permission</string>
    <string name="access_location_message">This application requires access to your location to function!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="maybe">Maybe</string>
    <string name="ask_me">Ask me</string>
    <string name="gps_required_message" translatable="false">GPS is required for this application to function!</string>
    <string name="not_found" translatable="false">Not found! Please try other dates or chose another destinations. Thank you!</string>
    <string name="preference_temperature_unit_title" translatable="false">Temperature Unit</string>
    <string name="temp_unit_celsius" translatable="false">Celsius/°C</string>
    <string name="temp_unit_fahrenheit" translatable="false">Fahrenheit/°F</string>
    <string name="rate_app">Rate this app</string>
    <string name="choosedayofdp">"Choose the day of departure"</string>
    <string name="choosedayofar">"Choose the day of arrived"</string>
    <string name="room_reservation">Room reservation</string>
    <string name="EUR" translatable="false">EUR - €</string>
    <string name="zero">0</string>
    <string name="room">Room</string>
    <string name="hotel_name" translatable="false">hotel name</string>
    <string name="address" translatable="false">address</string>
    <string name="hotels_description" translatable="false">hotels description</string>
    <string name="accept" translatable="false">Accept</string>
    <string name="total_price" translatable="false">total price:</string>
    <string name="dismiss" translatable="false">dismiss</string>
    <string name="_1_14" translatable="false">1/14</string>
    <string name="_0_13" translatable="false">0/13</string>
    <string name="overal" translatable="false">overal</string>
    <string name="per_night" translatable="false">per night:</string>
    <string name="us" translatable="false">US$</string>
    <string name="choose" translatable="false">choose</string>
</resources>